# python-library-template

./: LICENSE  README.md  pyproject.toml
.github/workflows/: PyTest.yml
src/tests/: test.py
src/typecheck/: typecheck.bat
